# PhilsCode

./: .gitignore  FIA_GFCHM_diag-pipeline.yaml  GB_est-chm-pipeline.yaml  GB_est-pipeline.yaml  GLMNET_var_select-pipeline.yaml  Join_FIA_GFCHM-pipeline.yaml  README.md  extract_chm-pipeline.yaml  hello-there-pipeline.yaml  input.csv  notes.md  output2.csv  output_COUNTY_BIOMASS.parquet  pipeline.yaml  setup.R  sort-pipeline.yaml
R/: GB_est.R  extract_county_chm.R  fia_gfchm_diagnostics.R  glmnet_var_select.R  hello-there.R  join_chm_stats.R  reformat_fia.R  setup.R  sort_csv.R
Rscripts/: 00_getPopEstwVar.R  00_redux.R  01_FIA_estimates_long_format.R  02_Extract_County_CHM_GEDI_30m.R  02_Extract_County_CHM_NAIP_serial.R  02a_Extract_County_CHM_NAIP_serial.R  03_Calculate_GEDI_Raster_Metrics.R  03_Calculate_NAIP_Raster_Metrics.R  03a_Calculate_NAIP_Raster_Metrics.R  04_merge_NAIP_and_GEDI_into_FIA_estimates.R  05_all_possible_regressions_command_line_args_2.R  06_evaluate_best_models.R  adj_YL_FisherScore_eblupFH.R  adj_YL_FisherScore_mseFH.R  (+2 more)
blocks/: GB_est.yaml  (+7 more)
philsblocks/: README.md  log.txt  pyproject.toml
philsblocks/src/biomass_00/: main.R
philsblocks/src/biomass_query/: main.py
philsblocks/src/extract_02/: main.R
philsblocks/src/fit/: main.R  main.py
philsblocks/src/merge_04/: main.R
philsblocks/src/metrics_03/: main.R
philsblocks/src/mountain_codes_01/: main.R
philsblocks/src/philsblocks.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
philsblocks/src/preprocessing/: main.R
philsblocks/src/vol_query/: main.py
(+14 files in other folders)
