[project]
name = "philsblocks"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [ "runtime4psae",]

[build-system]
requires = [ "setuptools", "setuptools-scm",]
build-backend = "setuptools.build_meta"

[project.scripts]
preprocessing = "preprocessing.main:main"
fit = "fit.main:main"
biomass_query = "biomass_query.main:main"
vol_query = "vol_query.main:main"
evaluate = "evaluate.main:main"
biomass_00 = "biomass_00.main:main"
mountain_codes_01 = "mountain_codes_01.main:main"
extract_02 = "extract_02.main:main"
metrics_03 = "metrics_03.main:main"
merge_04 = "merge_04.main:main"

[tool.uv.sources.runtime4psae]
path = "/home/krbundy/GitHub/psae-runtime-py"
